[tool.poetry]
name = "repl_python3_tg-index"
version = "0.1.0"
description = ""
authors = ["Gapemaster <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.3"
python-dotenv = "^0.19.2"
Telethon = "^1.24.0"
aiohttp = "^3.8.1"
aiohttp-jinja2 = "^1.5"
aiohttp-session = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
